--- a/src/style.css
+++ b/src/style.css
@@ -61,5 +61,22 @@ li:first-letter {
   cursor: default;
   text-decoration: none;
 }
-.weather-temperature .active:hover{
+.weather-temperature .active:hover {
   text-decoration: none;
+}
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: black;
+}
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+.weather-forecast-temperatures {
+  font-size: 13px;
+}
+.weather-forcast-temperature-min {
+  opacity: 0.5;
+}
